# 3DHIT

./: .gitignore  CLAUDE.md  Manifest.toml  Project.toml  README.md  pyproject.toml
ext/: HIT3DEnzymeExt.jl  HIT3DMakieExt.jl
scripts/: Manifest.toml  Project.toml  generate_dataset.jl  generate_dataset.py  linear_forcing_validation.jl  linear_forcing_validation.py  run_decaying.jl  run_decaying.py  run_linear_forcing.jl  run_linear_forcing.py
scripts/gpu/: Project.toml  test_gpu.jl
src/: HIT3D.jl  adjoint.jl  diagnostics.jl  fields.jl  grid.jl  labels.jl  plotting.jl  report.jl  schema.jl
src/diagnostics/: diagnostics.jl  physical.jl  spectral.jl
src/hit3d/: __init__.py  callbacks.py  diagnostics.py  fields.py  forcing.py  grid.py  integrators.py  labels.py  navierstokes.py  plotting.py  report.py  schema.py
src/integrators/: callbacks.jl  integrators.jl  rk4.jl
src/rhs/: forcing.jl  navierstokes.jl  rhs.jl
test/: runtests.jl
tests/: conftest.py  test_budget.py  test_callbacks.py  test_diagnostics.py  test_grad.py  test_grid.py  test_navierstokes.py  test_report_schema_labels.py
