[project]
name = "hit3d"
version = "0.1.0"
description = "Pseudo-spectral solver for 3D homogeneous isotropic turbulence in JAX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.35",
    "numpy>=2.0",
    "h5py>=3.10",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.8"]
cuda = ["jax[cuda12]>=0.4.35"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hit3d"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
